--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.2.2
   flutter_dotenv: ^5.2.1
   geolocator: ^13.0.2
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
