--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   geolocator: ^13.0.2
   provider: ^6.0.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
